force-app/main/default/objects/EI_Site__c/fields/Preferred_Language_EI__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language_EI__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>