force-app/main/default/objects/EI_Site__c/fields/prior_rep_assigned_date_ei__c.field-meta.xml
<CustomField>
    <fullName>prior_rep_assigned_date_ei__c</fullName>
    <description>Prior Rep Assigned Date for CC&amp;B SA REP-OUT</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Prior Rep Assigned Date for CC&amp;B SA REP-OUT</inlineHelpText>
    <label>Prior Rep Assigned Date</label>
    <type>Date</type>
</CustomField>