force-app/main/default/objects/EI_Site__c/fields/Project_Review__c.field-meta.xml
<CustomField>
    <fullName>Project_Review__c</fullName>
    <formula>HYPERLINK(IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,&quot;one/one.app?source=aloha#/sObject/00O36000006uPyaEAE/view?fv0=&quot;,&quot;/00O36000006uPyaEAE?pv0=&quot;)&amp;Name,&quot;Report Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Review</label>
    <type>Text</type>
</CustomField>