force-app/main/default/objects/EI_Site__c/fields/Property_Mgmt_Account_EI__c.field-meta.xml
<CustomField>
    <fullName>Property_Mgmt_Account_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Management Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site/Service Agreements (Property Management Account)</relationshipLabel>
    <relationshipName>Sites_Svc_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>