force-app/main/default/objects/EI_Site__c/fields/Property_Owner_Manager_EI__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner_Manager_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner/Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site/Service Agreements</relationshipLabel>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>