force-app/main/default/objects/EI_Site__c/fields/Rate_bsln_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Rate_bsln_Code_EI__c</fullName>
    <description>Rate climate zone.  Used to differentiate prices between customers in different climate zones who are on the same rates.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rate climate zone.  Used to differentiate prices between customers in different climate zones who are on the same rates.</inlineHelpText>
    <label>Rate Baseline Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>