force-app/main/default/objects/EI_Site__c/fields/Rate_Schedule_Eff_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Rate_Schedule_Eff_Date_EI__c</fullName>
    <description>Date that the specified rate schedule went into effect</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date that the specified rate schedule went into effect</inlineHelpText>
    <label>Rate Schedule Effective Date</label>
    <type>Date</type>
</CustomField>