force-app/main/default/objects/EI_Site__c/fields/Res_Ind_EI__c.field-meta.xml
<CustomField>
    <fullName>Res_Ind_EI__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>CDW data file indicator, denoting if SA is Residential (Y), or non-residential (N)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Res Ind</label>
    <length>1</length>
    <type>Text</type>
</CustomField>