force-app/main/default/objects/EI_Site__c/fields/Rltd_SA_altsvctype_EI__c.field-meta.xml
<CustomField>
    <fullName>Rltd_SA_altsvctype_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Look up a related SA for an additional service type.  For example, if this site/SA is an Electric service type, use this field to connect to a gas service type.</inlineHelpText>
    <label>Related SA (alt. service type)</label>
    <referenceTo>EI_Site__c</referenceTo>
    <relationshipLabel>Site/Service Agreements</relationshipLabel>
    <relationshipName>Sites_Svc_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>