force-app/main/default/objects/EI_Site__c/fields/Rotating_Outage_Block_EI__c.field-meta.xml
<CustomField>
    <fullName>Rotating_Outage_Block_EI__c</fullName>
    <description>Rotating Outage Block</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rotating Outage Block</inlineHelpText>
    <label>Rotating Outage Block</label>
    <length>16</length>
    <type>Text</type>
</CustomField>