force-app/main/default/objects/EI_Site__c/fields/Rule_Reason_Desc_EI__c.field-meta.xml
<CustomField>
    <fullName>Rule_Reason_Desc_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule Reason Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>