force-app/main/default/objects/EI_Site__c/fields/Rural_Or_Urban_EI__c.field-meta.xml
<CustomField>
    <fullName>Rural_Or_Urban_EI__c</fullName>
    <description>Rural Or Urban</description>
    <inlineHelpText>Rural Or Urban</inlineHelpText>
    <label>Rural Or Urban</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>