force-app/main/default/objects/EI_Site__c/fields/S_CMT_Account_Modified_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>S_CMT_Account_Modified_Date_EI__c</fullName>
    <description>This is for CMT interface.  This field will be set with  current datetime on when Account linked to site is changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CMT Account Modified Date</label>
    <type>DateTime</type>
</CustomField>