force-app/main/default/objects/EI_Site__c/fields/S_Zip_Code_with_5_Digits__c.field-meta.xml
<CustomField>
    <fullName>S_Zip_Code_with_5_Digits__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>S Zip Code with 5 Digits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>