force-app/main/default/objects/EI_Site__c/fields/SA_End_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>SA_End_Date_EI__c</fullName>
    <description>Service agreement end date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Service agreement end date</inlineHelpText>
    <label>SA End Date</label>
    <type>Date</type>
</CustomField>