force-app/main/default/objects/EI_Site__c/fields/SA_is_for_New_Cnst_Proj_EI__c.field-meta.xml
<CustomField>
    <fullName>SA_is_for_New_Cnst_Proj_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox to indicate if a SA is being created for a New Construction Project</description>
    <inlineHelpText>Use this checkbox to indicate if a SA is being created for a New Construction Project</inlineHelpText>
    <label>SA is for New Construction Project</label>
    <type>Checkbox</type>
</CustomField>