force-app/main/default/objects/EI_Site__c/fields/SA_Reason_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>SA_Reason_Code_EI__c</fullName>
    <label>SA Reason Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After Hours SA</fullName>
            </value>
            <value>
                <fullName>Primary SA</fullName>
            </value>
            <value>
                <fullName>Diesel Bypass</fullName>
            </value>
            <value>
                <fullName>Transmission Service</fullName>
            </value>
            <value>
                <fullName>Noncore Gas Service</fullName>
            </value>
            <value>
                <fullName>Impacted by 2017 Fires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>