force-app/main/default/objects/EI_Site__c/fields/SA_Start_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>SA_Start_Date_EI__c</fullName>
    <description>Service agreement start date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Service agreement start date</inlineHelpText>
    <label>SA Start Date</label>
    <type>Date</type>
</CustomField>