force-app/main/default/objects/EI_Site__c/fields/SAID_EI__c.field-meta.xml
<CustomField>
    <fullName>SAID_EI__c</fullName>
    <defaultValue>&quot;0000000000&quot;</defaultValue>
    <description>&apos;Service Agreement&apos; ID for the site.  Typically the electric meter number.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>&apos;Service Agreement&apos; ID for the site.  Typically the electric meter number.</inlineHelpText>
    <label>SA ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>