force-app/main/default/objects/EI_Site__c/fields/Sales_Div_EI__c.field-meta.xml
<CustomField>
    <fullName>Sales_Div_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>