force-app/main/default/objects/EI_Site__c/fields/Sch_Ld_Rdctn_Pgrm_Indctr_EI__c.field-meta.xml
<CustomField>
    <fullName>Sch_Ld_Rdctn_Pgrm_Indctr_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Load Reduction Program Indica</label>
    <length>1</length>
    <type>Text</type>
</CustomField>