force-app/main/default/objects/EI_Site__c/fields/Secondary_Phone_EI__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>