force-app/main/default/objects/EI_Site__c/fields/Seven_Day_NtcDate_EI__c.field-meta.xml
<CustomField>
    <fullName>Seven_Day_NtcDate_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seven Day Notice Date</label>
    <type>Date</type>
</CustomField>