force-app/main/default/objects/EI_Site__c/fields/Shutoff_Nonpay_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Shutoff_Nonpay_Date_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shutoff Nonpay Date</label>
    <type>Date</type>
</CustomField>