force-app/main/default/objects/EI_Site__c/fields/Site_Premise_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>Site_Premise_ID_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use for a utility-assigned Site / Premise ID, if applicable.</inlineHelpText>
    <label>Site/Premise ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>