force-app/main/default/objects/EI_Site__c/fields/Special_Flag__c.field-meta.xml
<CustomField>
    <fullName>Special_Flag__c</fullName>
    <label>Special Flag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K12 School ComCollege</fullName>
            </value>
            <value>
                <fullName>Community College</fullName>
                <isActive>false</isActive>
                <label>Community College</label>
            </value>
            <value>
                <fullName>K12 School</fullName>
                <isActive>false</isActive>
                <label>K12 School</label>
            </value>
            <value>
                <fullName>MDA List</fullName>
                <isActive>false</isActive>
                <label>MDA List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>