force-app/main/default/objects/EI_Site__c/fields/Square_Footage_EI__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage_EI__c</fullName>
    <label>Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>