force-app/main/default/objects/EI_Site__c/fields/SR_END_DATE_EI__c.field-meta.xml
<CustomField>
    <fullName>SR_END_DATE_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Smart Rate End Date</label>
    <type>Date</type>
</CustomField>