force-app/main/default/objects/EI_Site__c/fields/State_EI__c.field-meta.xml
<CustomField>
    <fullName>State_EI__c</fullName>
    <defaultValue>&quot;CA&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>