force-app/main/default/objects/EI_Site__c/fields/Street_Adr_Line_1_EI__c.field-meta.xml
<CustomField>
    <fullName>Street_Adr_Line_1_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Street Address Line 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>