force-app/main/default/objects/EI_Site__c/fields/Street_Adr_Line_2_EI__c.field-meta.xml
<CustomField>
    <fullName>Street_Adr_Line_2_EI__c</fullName>
    <description>Additional street address information</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Additional street address information</inlineHelpText>
    <label>Street Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>