force-app/main/default/objects/EI_Site__c/fields/strNAICS_Code_relation_EI__c.field-meta.xml
<CustomField>
    <fullName>strNAICS_Code_relation_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>strNAICS_Code_relation_EI</label>
    <length>80</length>
    <type>Text</type>
</CustomField>