force-app/main/default/objects/EI_Site__c/fields/Svc_Descriptor_EI__c.field-meta.xml
<CustomField>
    <fullName>Svc_Descriptor_EI__c</fullName>
    <description>SA service descriptor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SA service descriptor</inlineHelpText>
    <label>Service Descriptor</label>
    <length>254</length>
    <type>Text</type>
</CustomField>