force-app/main/default/objects/EI_Site__c/fields/Svc_Full_Adr_EI__c.field-meta.xml
<CustomField>
    <fullName>Svc_Full_Adr_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Service Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>