force-app/main/default/objects/EI_Site__c/fields/Svc_Status_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Svc_Status_Code_EI__c</fullName>
    <description>Status of this service agreement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status of this service agreement</inlineHelpText>
    <label>Service Status Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>