force-app/main/default/objects/EI_Site__c/fields/Svc_Type_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Svc_Type_Code_EI__c</fullName>
    <description>E  (Electric) or G  (Gas)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>E  (Electric) or G  (Gas)</inlineHelpText>
    <label>Service Type Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>