force-app/main/default/objects/EI_Site__c/fields/Tax_Exempt_Status_EI__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Status_EI__c</fullName>
    <description>Does this customer have an approved Utility Tax Exemption for this site on file with PG&amp;E</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does this customer have an approved Utility Tax Exemption for this site on file with PG&amp;E</inlineHelpText>
    <label>Tax Exempt Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>