force-app/main/default/objects/EI_Site__c/fields/Temperature_Sensitive_EI__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Sensitive_EI__c</fullName>
    <description>Temperature Sensitive indicator (Y/N)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Temperature Sensitive indicator (Y/N)</inlineHelpText>
    <label>Temperature Sensitive</label>
    <length>1</length>
    <type>Text</type>
</CustomField>