force-app/main/default/objects/EI_Site__c/fields/Total_Usage_Value_Rollup_EI__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Value_Rollup_EI__c</fullName>
    <inlineHelpText>Shows total usage as rollup of usage data values.</inlineHelpText>
    <label>Total Usage Value (Rollup)</label>
    <summarizedField>EI_Usage__c.Usage_Value_EI__c</summarizedField>
    <summaryForeignKey>EI_Usage__c.Site_EI__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>