force-app/main/default/objects/EI_Site__c/fields/TOU_End_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>TOU_End_Date_EI__c</fullName>
    <description>Time of Use End Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Time of Use End Date.</inlineHelpText>
    <label>TOU End Date</label>
    <type>Date</type>
</CustomField>