force-app/main/default/objects/EI_Site__c/fields/TOU_Start_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>TOU_Start_Date_EI__c</fullName>
    <description>Time of Use Start Date.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Time of Use Start Date.</inlineHelpText>
    <label>TOU Start Date</label>
    <type>Date</type>
</CustomField>