force-app/main/default/objects/EI_Site__c/fields/TOU_Stop_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>TOU_Stop_Date_EI__c</fullName>
    <description>TOU Stop Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>TOU Stop Date</inlineHelpText>
    <label>TOU Stop Date</label>
    <type>Date</type>
</CustomField>