force-app/main/default/objects/EI_Site__c/fields/Twenty_Four_Hr_NtcDate_EI__c.field-meta.xml
<CustomField>
    <fullName>Twenty_Four_Hr_NtcDate_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twenty Four Hour Notice Date</label>
    <type>Date</type>
</CustomField>