force-app/main/default/objects/EI_Site__c/fields/Unique_SA_ID_EI__c.field-meta.xml
<CustomField>
    <fullName>Unique_SA_ID_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Unique SA ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>