force-app/main/default/objects/EI_Site__c/fields/Update_Adr_EI__c.field-meta.xml
<CustomField>
    <fullName>Update_Adr_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Address?</label>
    <type>Checkbox</type>
</CustomField>