force-app/main/default/objects/EI_Site__c/fields/Usage_Billing_Amount_EI__c.field-meta.xml
<CustomField>
    <fullName>Usage_Billing_Amount_EI__c</fullName>
    <inlineHelpText>Shows total billing amount from usage records.</inlineHelpText>
    <label>Total Billing Amount (Rollup)</label>
    <summarizedField>EI_Usage__c.Total_Bill_Amount_EI__c</summarizedField>
    <summaryForeignKey>EI_Usage__c.Site_EI__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>