force-app/main/default/objects/EI_Site__c/fields/Use_Acct_Shipping_Add_EI__c.field-meta.xml
<CustomField>
    <fullName>Use_Acct_Shipping_Add_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically-set field reflecting the configuration setting that was in effect when site was originally created.  (We have to use a separate field, because List custom settings cannot be accessed in formula fields.)</description>
    <inlineHelpText>Automatically-set field reflecting the configuration setting that was in effect when site was originally created.</inlineHelpText>
    <label>Use Account Shipping Address</label>
    <type>Checkbox</type>
</CustomField>