force-app/main/default/objects/EI_Site__c/fields/Utility_Account_Number_EI__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number_EI__c</fullName>
    <defaultValue>&quot;0000000000&quot;</defaultValue>
    <description>Utility company account number for this site</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Energy Insight Account</inlineHelpText>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>