force-app/main/default/objects/EI_Site__c/fields/Utility_Tax_Status_EI__c.field-meta.xml
<CustomField>
    <fullName>Utility_Tax_Status_EI__c</fullName>
    <description>Is this SA subject to a Utility User Tax</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Is this SA subject to a Utility User Tax</inlineHelpText>
    <label>Utility Tax Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>