force-app/main/default/objects/EI_Site__c/fields/Vintage_EI__c.field-meta.xml
<CustomField>
    <fullName>Vintage_EI__c</fullName>
    <inlineHelpText>Use only as applicable, per program. If not applicable, choose OTR No Vintage Available</inlineHelpText>
    <label>Vintage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>75 - Built before 1978</fullName>
            </value>
            <value>
                <fullName>85 - Built 1978 - 1992</fullName>
            </value>
            <value>
                <fullName>96 - Built 1993 - 2001</fullName>
            </value>
            <value>
                <fullName>03 - Built 2002 - 2005</fullName>
            </value>
            <value>
                <fullName>07 - Built 2006 - 2009</fullName>
            </value>
            <value>
                <fullName>11 - Built 2010 - 2013</fullName>
            </value>
            <value>
                <fullName>14 - Built after 2013</fullName>
            </value>
            <value>
                <fullName>M1 - Mobile Home - Before 1976</fullName>
            </value>
            <value>
                <fullName>M2 - Mobile Home - 1976 - 1994</fullName>
            </value>
            <value>
                <fullName>M3 - Mobile Home - 1995 - 2005</fullName>
            </value>
            <value>
                <fullName>M4 - Mobile Home - After 2005</fullName>
            </value>
            <value>
                <fullName>EX</fullName>
            </value>
            <value>
                <fullName>ANY</fullName>
            </value>
            <value>
                <fullName>Old - Mobile Home - Before 1995</fullName>
            </value>
            <value>
                <fullName>Rec - Mobile Home - After 2015</fullName>
            </value>
            <value>
                <fullName>Old - Built - Before 2002</fullName>
            </value>
            <value>
                <fullName>Rec - Built - After 2017</fullName>
            </value>
            <value>
                <fullName>Ex - Built 2002 - 2016</fullName>
            </value>
            <value>
                <fullName>Ex - Mobile Home - 1995 - 2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>