force-app/main/default/objects/EI_Site__c/fields/X18_Digit_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Salesforce_ID__c</fullName>
    <description>This is converting 15 digit salesforce ID to 18 digit ID.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Service/Agreement ID (18 digit)</label>
    <type>Text</type>
</CustomField>