force-app/main/default/objects/EI_Site__c/fields/Zip_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_EI__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>