force-app/main/default/objects/EI_Site__c/recordTypes/Non_Residential.recordType-meta.xml
<RecordType>
    <fullName>Non_Residential</fullName>
    <active>true</active>
    <description>For non-residential SA with RES_IND_EI__c = N</description>
    <label>Non-Residential</label>
</RecordType>