force-app/main/default/objects/EI_Site__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <description>For residential SA, where RES_IND_EI__c = Y</description>
    <label>Residential</label>
</RecordType>