force-app/main/default/objects/EI_Site__c/validationRules/Can_only_create_new_Cnst_SAs.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_only_create_new_Cnst_SAs</fullName>
    <active>true</active>
    <description>If a user other than a system administrator tries to create a SA, then the SA is for new construction check box must be checked</description>
    <errorConditionFormula>IF(

AND(

ISNEW(), 

AND(  
NOT( $Profile.Name = (&quot;System Administrator&quot;)), 
NOT( $Profile.Name = ( &quot;Integration User&quot;)),
NOT( $Profile.Name = ( &quot;Technology Enablement&quot;))
),

New_Streetlight_SA_EI__c = FALSE,


SA_is_for_New_Cnst_Proj_EI__c = FALSE), TRUE, FALSE

 
)</errorConditionFormula>
    <errorMessage>You must be a system administrator to create a Site / Service Agreement unless you select that this SA is for a New Construction Project OR New Streetlight SA</errorMessage>
</ValidationRule>