force-app/main/default/objects/EI_Site__c/validationRules/Enforce_Account_for_New_Construction.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Account_for_New_Construction</fullName>
    <active>true</active>
    <description>Makes sure that the &apos;Account&apos; field is filled in for &apos;New Construction&apos; projects</description>
    <errorConditionFormula>AND(
  ISBLANK(Account_EI__c),
  SA_is_for_New_Cnst_Proj_EI__c  = true
)</errorConditionFormula>
    <errorDisplayField>Account_EI__c</errorDisplayField>
    <errorMessage>You must fill in the Account field for &apos;New Construction&apos; SAs. If you don&apos;t have a specific account, please select &apos;New Construction Account&apos;.</errorMessage>
</ValidationRule>