force-app/main/default/objects/EI_Site__c/validationRules/FM_cant_edit_existing_SA.validationRule-meta.xml
<ValidationRule>
    <fullName>FM_cant_edit_existing_SA</fullName>
    <active>true</active>
    <description>If the SA has an external id the New Streetlight SA checkbox cannot be checked</description>
    <errorConditionFormula>AND (

NOT(ISBLANK( External_ID_EI__c )),

 New_Streetlight_SA_EI__c = TRUE)</errorConditionFormula>
    <errorDisplayField>New_Streetlight_SA_EI__c</errorDisplayField>
    <errorMessage>New Streetlight SA checkbox cannot be checked when External ID is populated</errorMessage>
</ValidationRule>